--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./css/flag-icon.css">
     <title>SignFlow</title>
     <script>
-      window.DOMAIN = 'http://localhost:5000';
-      //window.DOMAIN = 'https://signflow-api.herokuapp.com';
+      //window.DOMAIN = 'http://localhost:5000';
+      window.DOMAIN = 'https://signflow-api.herokuapp.com';
     </script>
   </head>
   <body style="overflow-y: hidden;">
