--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 -->
     <title>SignFloww</title>
     <script>
-      //window.DOMAIN = 'http://localhost:5000';
-      window.DOMAIN = 'https://signflow-api.herokuapp.com';
+      window.DOMAIN = 'http://localhost:5000';
+      //window.DOMAIN = 'https://signflow-api.herokuapp.com';
     </script>
   </head>
   <body style="overflow-y: hidden;">
